--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <section>
     <div>
-      <h2>My Name is Pacey Jared Pindot</h2>
+      <h2>My Name is Pacey</h2>
       <h3>I'm in Grade 10</h3>
     </div>
     <div>
